--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="">About us</a></li>
                 <li><a href="">Menu</a></li>
                 <li><select name="" id="option">
-                    <option value="">Pages</option>
+                    <option selected disabled>Pages</option>
                     <option value="">Chicken Burger</option>
                     <option value="">Beef Burger</option>
                 </select></li>
@@ -39,18 +39,19 @@
 <p class="pera1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure id accusantium vel omnis praesentium eaque debitis laborum cupiditate porro provident quae, perferendis fugit aliquid dignissimos. Ad inventore aut voluptatibus mollitia.</p>
 <div class="icon-section">
     <div class="nife">
-        <img id="spone" src="./spone.png" alt="">
+        <i id="spone" class="fa fa-cutlery"></i>
         <p class="icon-pera">Delicious</p>
     </div>
     <div class="drop">
-        <img src="./drop.png" alt="">
+        <i id="drop" class='fa fa-tint'></i>
         <p class="icon-pera">Fresh</p>
     </div>
     <div class="leaf">
-        <img src="./leaf.png" alt="">
+        <i id="leaf" class='fa fa-leaf'></i>
         <p class="icon-pera">Organic</p>
     </div>
 </div>
+<button class="learn">Learn More</button>
         </div>
        
     </div>
