--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="links">
             <ul class="pages-link">
-                <li><a id="home" href="">Home</a></li>
-                <li><a href="">About us</a></li>
-                <li><a href="">Menu</a></li>
+                <li><a id="home" href="#Home">Home</a></li>
+                <li><a href="#about-us">About us</a></li>
+                <li><a href="#zinger-burger">Menu</a></li>
                 <li><select name="" id="option">
                     <option selected disabled>Pages</option>
                     <option value="">Chicken Burger</option>
@@ -29,7 +29,8 @@
             <i id="bar" class="fa fa-bars"></i>
         </div>
     </nav>
-    <div class="main-content">
+    <!-- this section is main-container for special burger -->
+    <div id="Home" class="main-content">
         <div class="burger-img">
             <img id="big-burger" src="./big burger.png" alt="">
         </div>
@@ -55,5 +56,50 @@
         </div>
        
     </div>
+    <!-- this section is container for zinger burger -->
+    <div id="zinger-burger" class="container">
+        <div class="hero-content">
+<h1 class="heading2">ENJOY BURGER CLUB'S ZINGER BURGERS </h1>
+<div class="line"></div>
+<p class="pera2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure id accusantium vel omnis praesentium eaque debitis laborum cupiditate porro provident quae, perferendis fugit aliquid dignissimos. Ad inventore aut voluptatibus mollitia.</p>
+<div class="icon-section">
+    <div class="nife">
+        <i id="spone" class="fa fa-cutlery"></i>
+        <p class="icon-pera2">Delicious</p>
+    </div>
+    <div class="drop">
+        <i id="drop" class='fa fa-tint'></i>
+        <p class="icon-pera2">Fresh</p>
+    </div>
+    <div class="leaf">
+        <i id="leaf" class='fa fa-leaf'></i>
+        <p class="icon-pera2">Organic</p>
+    </div>
+</div>
+<button class="learn">Learn More</button>
+        </div>
+        <div class="burger-img">
+            <img id="big-burger" src="./zinger.png" alt="">
+        </div>
+    </div>
+ <!-- this section is About us -->
+<div id="about-us" class="about-section">
+    <div class="About-heading">
+       <h1 class="head1">ABOUT US</h1> 
+    </div>
+    <h3 class="heading3">
+        Welcome to Burger Club !
+    </h3>
+    <div class="about-pera">
+        <p>
+        Where passion for patties meets flavor euphoria. At Burger Club, we've crafted an online haven for burger enthusiasts and culinary adventurers alike. Dive into a world of sizzling perfection, where every bite tells a tale of craftsmanship and creativity.</p>
+        <p>
+        Indulge your taste buds in a symphony of handpicked ingredients, succulent meats, and delectable toppings, all orchestrated to create the ultimate burger experience. From classic char-grilled wonders to daring gourmet creations, our menu is a gastronomic journey that celebrates the art of the perfect burger.</p>
+    <p>
+        Immerse yourself in a community of fellow burger aficionados. Share your favorite recipes, discover mouthwatering tips, and ignite your passion for all things burger-related. Whether you're a seasoned grill master or a kitchen novice, Burger Club is your digital destination for inspiration and indulgence.</p>
+    <p>
+        Join us at Burger Club where burgers are more than just a meal; they're a celebration of taste, texture, and the joy of good company. Unleash your inner burger connoisseur and embark on a culinary adventure like no other. It's time to savor the extraordinary at Burger Club where every bite tells a story!</p>
+    </div>
+</div>
 </body>
 </html>
